# sv-analyzer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.claude/skills/rmcp-usage/: SKILL.md
.claude/skills/sv-parser-usage/: SKILL.md  SV-PARSER-USAGE.md
.claude/skills/wellen-usage/: SKILL.md  WELLEN_USAGE.md  wellen-api.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs  services.rs
crates/app/tests/: blockize_demo_design.rs  blues_demo.rs  extract_assign_dataflow.rs  parse_demo_sv.rs  read_demo_wave.rs  read_trace_coverage.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_blockize.rs  cli_slice.rs  cli_wave.rs  smoke_cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  services.rs
crates/core/tests/: block_models.rs  blockize_demo_design.rs  blues_demo.rs  extract_assign_dataflow.rs  parse_demo_sv.rs  read_demo_wave.rs  read_trace_coverage.rs  slice_json.rs  types_json.rs  (+2 more)
crates/mcp/: Cargo.toml
crates/sva-cli/: Cargo.toml
crates/sva-core/: Cargo.toml
crates/sva-mcp/: Cargo.toml
crates/sva-mcp/src/: handlers.rs  main.rs  protocol.rs
crates/sva-tui/: Cargo.toml
crates/sva-tui/src/: app.rs  graph.rs  lib.rs  main.rs  ui.rs
crates/sva-tui/tests/: tree_app.rs
crates/sva-vscode/: Cargo.toml
crates/vscode-backend/: Cargo.toml
demo/multi_submodule_demo/: design.sv  tb.sv
docs/: 2026-03-14-blockization-regression-retrospective.md
docs/plans/: 2026-03-13-dataflow-engine-implementation.md  2026-03-14-slice-graph-viewer.md  2026-03-16-assignment-statement-coverage.md  2026-03-16-trace-coverage-regression-tests.md
scripts/: interactive_blues_tree.py  interactive_blues_tree_test.py  print_blues_tree.py  print_blues_tree_test.py
src/: lib.rs  types.rs
src/ast/: mod.rs  sv_parser.rs
src/block/: dataflow.rs  mod.rs
src/coverage/: mod.rs  statements.rs  vcd.rs
src/slicer/: blues.rs  mod.rs  static_slice.rs
src/wave/: mod.rs  wellen.rs
tests/integration/: block_models.rs  blockize_demo_design.rs  blues_demo.rs  cli_blockize.rs  cli_coverage.rs  cli_slice.rs  cli_wave.rs  extract_assign_dataflow.rs  parse_demo_sv.rs  read_demo_wave.rs  read_trace_coverage.rs  slice_json.rs  smoke_cli.rs  static_slice_demo.rs  trait_object_compile.rs  types_json.rs
viewer/: README.md  app.js  graph-core.js  graph-core.test.mjs  index.html  sample-data.js  styles.css
viewer/examples/: demo-dynamic-slice.json  demo-static-slice.json
(+63 files in other folders)
