[package]
name = "sva_mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sva_mcp"
path = "src/main.rs"

[dependencies]
sva_core = { path = "../sva-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
