[package]
name = "sva_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sva_tui"
path = "src/main.rs"

[dependencies]
sva_core = { path = "../sva-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde_json = "1"

[dev-dependencies]
serde_json = "1"
